# sodier_gun

./: .gitignore  CMakeLists.txt  README.txt  bind.cpp  main.cpp  main.py  models.py  soldier.py  test.cpp  test.py
build copy/: CMakeCache.txt  cmake_install.cmake
include/: Gun.h  Soldier.h  add.h  dataset.h  draw.h  iter.h  network.h  test1.h  test2.h
mains/: README.md  main_iteruse.cpp
modules/: chinese_font.py  draw_mean_std.py  normalize.py  train_eval.py  vis_eval.py
scripts/: benchmark_fixed.py  check_lmdb.py  com_d_p.py  create_lmdb.py  dali_lmdb_pipeline.py  example_train_pytorch.py  line_model.py  quadratic_model.py  tell_bird_airplane.py  test.py  test1.py  test_lmdb.py
src/: Gun.cpp  Soldier.cpp  add.cpp  draw.cpp  iter_test.cpp  main.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp
step2/: CMakeLists.txt  compare.py  pymatrix.py
